# Projeto-PNS-2019

./: .gitignore  Apresentacao_Analise_Entropia_NB06.pptx  README.md  Relatorio_Variaveis_PNS2019_Artrite_Pedro_Dias_Soares.xlsx  analise_projeto_pns.md  anoacoes.md  config.toml  dicionario_PNS_microdados_2019.xls  fix_nb.py  proxima_fase.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
Documentos_organizacao/: Artigo_Template_de_Trabalho_PNS2019.docx  Guia_Analises_Relatorios_PNS2019_Artrite.docx  Plano_Artigo_Mineracao_Pedro_Dias_Soares.docx  Resultados_Consolidados_PNS2019_Artrite.docx  analise_projeto_pns.md  plano_reestruturacao.md  ~$ano_Artigo_Mineracao_Pedro_Dias_Soares.docx
Produção/: artigo_cientifico_mockup.docx  padroes_nutricao_artrite_idosos_v1.docx  padroes_nutricao_artrite_idosos_v3.docx  padroes_nutricao_artrite_idosos_v3_CORRIGIDO.docx  padroes_nutricao_artrite_idosos_v4_ATUALIZADO.docx  padroes_nutricao_artrite_idosos_v5_REEXECUTADO.docx  padroes_nutricao_artrite_idosos_v6.docx
docs/: arquitetura_projeto.md  documentacao_modificacoes.md  documentacao_notebook.md  gerar_pdf.py  plano_reestruturacao.md  proxima_fase.md  spec_nutricao_desenho3.md
notebooks/: 01_extracao_pre_processamento.ipynb  02_analise_exploratoria_bivariada.ipynb  02b_analise_exploratoria_comorbidades.ipynb  03_preprocessamento_v3.ipynb  03b_preprocessamento_comorbidades.ipynb  03c_preprocessamento_desenho3.ipynb  04_discretizacao.ipynb  04_eliminacao_outliers.ipynb  05_exportacao_bases.ipynb  06_modelagem_ml.ipynb  Rastrear_registros.txt  dicionario_PNS_microdados_2019.xls  modelagem.py  nutricao.py  pessoas_saudaveis.ipynb  preparar_bancos.py  rastrear_registros_nulos.py
scripts/: apply_fixes.py  build_documento_resultados.py  build_nb03.py  (+6 more)
(+46 files in other folders)
